apps/oauth2-proxy/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  ports:
    - port: 4180
  selector:
    app: oauth2-proxy
    component: oauth2-proxy
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-redis
spec:
  ports:
    - port: 6379
  selector:
    app: oauth2-proxy
    component: redis
